src/test/ui/repeat_count.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/repeat_count.rs:5:17
   |
LL |     let a = [0; n];
   |                 ^ non-constant value

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:7:17
   |
LL |     let b = [0; ()];
   |                 ^^ expected usize, found ()
   |
   = note: expected type `usize`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:12:17
   |
LL |     let c = [0; true];
   |                 ^^^^ expected usize, found bool

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:15:17
   |
LL |     let d = [0; 0.5];
   |                 ^^^ expected usize, found floating-point number
   |
   = note: expected type `usize`
              found type `{float}`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:20:17
   |
LL |     let e = [0; "foo"];
   |                 ^^^^^ expected usize, found reference
   |
   = note: expected type `usize`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:25:17
   |
LL |     let f = [0; -4_isize];
   |                 ^^^^^^^^ expected usize, found isize
help: you can convert an `isize` to `usize` and panic if the converted value wouldn't fit
   |
LL |     let f = [0; (-4_isize).try_into().unwrap()];
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:28:23
   |
LL |     let f = [0_usize; -1_isize];
   |                       ^^^^^^^^ expected usize, found isize
help: you can convert an `isize` to `usize` and panic if the converted value wouldn't fit
   |
LL |     let f = [0_usize; (-1_isize).try_into().unwrap()];
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:34:17
   |
LL |     let g = [0; G { g: () }];
   |                 ^^^^^^^^^^^ expected usize, found struct `main::G`
   |
   = note: expected type `usize`
              found type `main::G`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0308, E0435.
For more information about an error, try `rustc --explain E0308`.
